--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "react-testing-library": "^5.4.4",
     "redux": "^4.0.1",
     "yup": "^0.26.6"
   },
@@ -30,6 +29,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "json-server": "^0.14.2"
+    "jest-dom": "^3.0.0",
+    "json-server": "^0.14.2",
+    "react-testing-library": "^5.4.4"
   }
 }
